--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 springfox.documentation.swagger-ui.enabled=true
-springfox.documentation.swagger-ui.path=/api/swagger-ui.html
+springfox.documentation.swagger-ui.path=/swagger-ui.html
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-server.servlet.contextPath=/api
