Fixed tracer dependency on pom

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,8 @@
 		<dependency>
 			<groupId>io.corp.calculator</groupId>
 			<artifactId>tracer</artifactId>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/tracer-1.0.0.jar</systemPath>
 			<version>1.0.0</version>
 		</dependency>
 
