--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 springfox.documentation.swagger-ui.enabled=true
 springfox.documentation.swagger-ui.path=/swagger-ui.html
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.mvc.static-path-pattern=/static
